--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,9 +2,30 @@ body, html {
     margin: 0;
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border: #f9f9f9;
+}
+
+.logo{
+    margin: 15px 10px;
+    display: inline-flex;
+    
+}
+
+.titulo{
+    margin: 5px 350px;
+    align-self: center;
+    
 }
 ul { list-style: none; padding-left: 5px; }
-a { color:blue; text-decoration: none;}
+a { color:#004000;text-decoration: none;}
+
+a:hover{
+    background-color: #004000;
+    color: #f9f9f9;
+    border-radius: 50px;
+    padding: 5px;
+    margin: 15px;
+}
 .bar {
     background-color: #f9f9fb;
     padding:15px;
@@ -25,6 +46,7 @@ a { color:blue; text-decoration: none;}
 .footer {
     min-height: 100px;
     border-top: solid 1px #cdcdcd;
+    text-align: center;
 }
 .anchors {
     border-left: solid 1px #cdcdcd;
@@ -35,4 +57,35 @@ a { color:blue; text-decoration: none;}
 }
 figure {
     text-align: center;
+}
+
+h1, h2, h4 {
+    color: #004000;
+}
+
+table{
+    border: 2;
+    margin: 10px 150px;
+    
+    background-color: #f9f9f9;
+    border: 1px;
+    border-color: #aaa;
+    border-style: solid;
+    border-collapse: collapse;
+    font-size: 90%;
+}
+ /*margin: 1em 1em 1em 0;*/
+
+#escudos {
+  
+   margin: 0 100px;
+}
+
+figcaption{
+    margin: 0 100px;
+}
+
+.mascote{
+   margin: 0 300px;
+
 }
